tests/build/fail/property/allowed_in_when_validation.stderr
error[E0283]: type annotations needed
 --> $DIR/allowed_in_when_validation.rs:5:43
  |
5 | pub fn invalid(child: impl UiNode, value: bool) -> impl UiNode {
  |                                           ^^^^ cannot infer type for type parameter `T` declared on the trait `IntoVar`
  |
  = note: cannot satisfy `_: VarValue`
  = note: required by `allowed_in_when_property_requires_IntoVar_members`
